# NeuroRC

./: .gitignore  CLAUDE.md  DIAGNOSTICS.md  NEXT_STEPS.md  PLAN.md  PUBLICATIONS.md  README.md  RESEARCH_DIRECTIONS.md  const.py  constants.py  delay_buffer.py  dynamic_voltage_plot.py  graph.gexf  graph_build.py  integrators.py  logging_hdf5.py  math_functions.py  network_plot.py  pyproject.toml  pytest.ini  requirements.txt  run.py  simulate.py  state.py  teX.md  update_functions.py  update_scheme.py  voltage_plot.py  weight_generator.py
data/p0/: alpha_beta_grid_post_fixB.txt  biophysics_post_fixB.txt  dt_ranges.csv  recalibrate_post_fixB.txt  v_thresh_sweep_post.csv
docs/: DIAGNOSTICS.md  IMPLEMENTATION.md  NEXT_STEPS.md  PLAN.md  PUBLICATIONS.md
metrics/: ews.py  oracles.py
publications/: README.md
publications/p0_methods/: notes.md
publications/p1_ahp_reservoir/: notes.md
publications/p3_connectome_atlas/: notes.md
scripts/: __init__.py  diag_alpha_beta_grid.py  diag_recalibrate_directed.py  diag_soderlind_separation.py  p0_make_figures.py  phase1_biophysics_report.py  proposal2_pilot.py  proposal2_pilot_smoke.py
src/: delay_buffer.py  logging_hdf5.py  math_functions.py  network_plot.py  state.py  update_functions.py  weight_generator.py
src/metrics/: __init__.py  stats.py
tests/: conftest.py  test_bistability.py  test_drive_modes.py  test_graph_build.py  test_hdf5_dump.py  test_metrics.py  test_regression.py  test_sparse_spmv.py  test_validation.py  test_weights.py
tests/baselines/: lif_n10_k4_p02_t1000_seed0.npy  lif_n2_k1_t1000_seed0.npy
(+9 files in other folders)
